# fastapi_tasks_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.services.yml  entrypoint.sh  justfile  logging.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-07-25_initial_db_migration.py
src/: config.py  database.py  env_dev_example  main.py  models.py  repository.py  routers.py  schemas.py
